--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,45 +1,36 @@
-version: "3"
+version: '3'
 services:
-  smtp:
-    image: mailhog/mailhog:latest
-    restart: always
-    ports:
-      - "8025:8025"
-      - "1025:1025"
-  pgdev:
-    container_name: fider_pgdev
+  db:
     restart: always
     image: postgres:12
     volumes:
-      - pgdev-data:/var/lib/postgresql/data
-    ports:
-      - "5555:5432"
+      - /var/fider/pg_data:/var/lib/postgresql/data
     environment:
       POSTGRES_USER: fider
-      POSTGRES_PASSWORD: fider_pw
-  pgtest:
-    container_name: fider_pgtest
-    restart: always
-    image: postgres:12
-    ports:
-      - "5566:5432"
-    environment:
-      POSTGRES_USER: fider_test
-      POSTGRES_PASSWORD: fider_test_pw
-  s3test:
-    container_name: fider_s3test
-    restart: always
-    image: minio/minio:RELEASE.2021-07-27T02-40-15Z
-    ports:
-      - "9000:9000"
-      - "9001:9001"
-    volumes:
-      - s3test-data:/data
-    environment:
-      MINIO_ACCESS_KEY: s3user
-      MINIO_SECRET_KEY: s3user-s3cr3t
-    command: server /data --console-address ":9001"
+      POSTGRES_PASSWORD: s0m3g00dp4ssw0rd
 
-volumes:
-  pgdev-data:
-  s3test-data:
+  app:
+    restart: always
+    image: getfider/fider:stable
+    ports:
+      - "80:3000"
+    environment:
+      BASE_URL: https://feedback.yoursite.com
+      DATABASE_URL: postgres://fider:s0m3g00dp4ssw0rd@db:5432/fider?sslmode=disable
+      JWT_SECRET: VERY_STRONG_SECRET_SHOULD_BE_USED_HERE
+      EMAIL_NOREPLY: noreply@yourdomain.com
+      # Uncomment and configure the email service you are going to use
+      # EMAIL_MAILGUN_API: key-yourkeygoeshere
+      # EMAIL_MAILGUN_DOMAIN: yourdomain.com
+      # EMAIL_MAILGUN_REGION: US
+      # EMAIL_SMTP_HOST: smtp.yourdomain.com
+      # EMAIL_SMTP_PORT: 587
+      # EMAIL_SMTP_USERNAME: user@yourdomain.com
+      # EMAIL_SMTP_PASSWORD: s0m3p4ssw0rd
+      # EMAIL_SMTP_ENABLE_STARTTLS: 'true'
+      # EMAIL_AWSSES_REGION: us-east-1
+      # EMAIL_AWSSES_ACCESS_KEY_ID: youraccesskeygoeshere
+      # EMAIL_AWSSES_SECRET_ACCESS_KEY: yoursecretkeygoeshere
+
+    depends_on:
+      - db
